# lovv_data_collect

./: .gitignore
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent-rag.md  bug.md  data.md  docs.md  feature.md  infra.md  refactor.md  task.md  test.md
crawling/: pyproject.toml
docs/: data_pipeline_prd.md  data_preprocessing_plan.md
docs/reports/: korea_data_preprocessing_result_report.md
docs/specs/: data_pipeline_spec.md
infrastructure/terraform/: .env.example  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
src/kr_details_pipeline/: cli.py  domain_preprocess.py
src/kr_details_pipeline/handlers/: domain_loader_handler.py
src/kr_details_pipeline/tests/: test_domain_loader_handler.py  test_domain_preprocess.py  test_load.py
src/kr_image_uploader/: audit.py  extract.py  romanize.py  s3_keys.py
