[project]
name = "lovv-crawling"
version = "0.1.0"
description = "Lovv country data crawling utilities."
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "requests>=2.31,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["JP", "KR"]
